@@ -44,6 +44,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #11696: Fix ID generation in msilib.
+
 - Issue #9696: Fix exception incorrectly raised by xdrlib.Packer.pack_int when
   trying to pack a negative (in-range) integer.
 
